# PauliPropagation.py

./: .gitignore  Classical Simulation of Quantum Circuit.pptx  Instructions.md  LICENSE  README.md  TFI_IBM_real_data.ipynb  TFI_kicked_ising.ipynb  Tutorial_notebook.ipynb  benchmark_results.pkl  c1_readme.md  calculate_mse_truncation.py  debug_test.py  debug_ultra_fast.py  experiment.ipynb  interview_prep.ipynb  junk.ipynb  kak_mc.py  kak_pauli_prop.py  kicked_ising_IBM_data.ipynb  m1_readme.md  mc_3layer_2m.json  mc_4layer_3m.json  mc_results_dict.json  minimal_test.py  mse_notebook_code.py  official_tutorial.ipynb  portfolio_optimisation.ipynb  profile.ipynb  report.md  requirements.txt  restart_numba.ipynb  setup.py  simple_demo.ipynb  simple_test.py  simple_ultra_fast_test.py  staircase_su4_2d.py  step_by_step_test.ipynb  su4_mc.py  su4_random_staircase_kak.ipynb  su4_staircase_4_4_benchmark.ipynb  (+15 more)
_results/: mc_results_dict.json
_results/kak/: kak_mc_results_L2.json  kak_mc_results_L4.json  kak_mc_results_dict.json  kak_prop_results_L3.json  kak_prop_results_L4.json  kak_samples_L2.pkl
pauli_pkg/: _setup.py  pyproject.toml  setup.py
pauli_pkg/integration_test/: test_kicked_ising.py  test_propagator_random.py  test_staircase_random_su4.py  test_su4_kak_consistent.py
pauli_pkg/pauli_propagation/: __init__.py  circuit_topologies.py  decomposition.py  gates.py  monte_carlo.py  pauli_gates_cy.txt  pauli_term.py  propagator.py  su4_gate_cy.pyx  utils.py
pauli_pkg/pauli_propagation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pauli_pkg/tests/: conftest.py  test_ccx_gate.py  test_crx_cry_crz_gates.py  test_cx_cy_cz_ch_gates.py  test_cx_gate.py  test_gates.py  test_h_gate.py  test_propagator_random.py  test_rx_ry_rz_gates.py  test_rxx_ryy_rzz_gates.py  test_staircase_random_su4.py  test_su2_gate.py  test_su4_gate.py  test_swap_iswap_gates.py  test_t_gate.py  test_x_y_z_gates.py
pauli_pkg/unit_test/: test_ccx.py  test_crx_cry_crz.py  test_cx_cy_cz_ch.py  test_h.py  test_rx_ry_rz.py  test_rxx_ryy_rzz.py  test_su2.py  test_su4.py  test_swap_iswap.py  test_t.py  test_x_y_z.py
report/: presentation_script.docx
results/: ibm_real_data.json  kak_mc_results_L1.json  kak_mc_results_L2.json  kak_mc_results_L3.json  kak_mc_results_L4.json  su4_time_expectation_4_4.json
(+85 files in other folders)
