[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pauli_propagation"
dynamic = ["version"]
description = "Pauli-based back-propagation of observables through noiseless quantum circuits."
authors = [{ name = "Steven Ma", email = "ym432@cam.ac.uk.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "qiskit>=2.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-randomly"]

[tool.setuptools]
packages = ["pauli_propagation"]
