[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "numpy>=1.24",
]
build-backend = "setuptools.build_meta"

[project]
name = "pauli-propagation"
version = "0.1.0"
description = "Pauli-based back-propagation of observables through noiseless quantum circuits."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Steven Ma", email = "ym432@cam.ac.uk" }
]
dependencies = [
  "qiskit>=2.0",
  "qiskit-ibm-runtime",
  "qiskit[visualization]",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "jupyter",
  "notebook",
  "pytest",
  "tqdm",
  "ipywidgets",
  "pylatexenc",
  "ipykernel",
  "tabulate",
]
# NOTE: qiskit-aer should be installed via conda:
#   conda install -c conda-forge qiskit-aer

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-randomly",
  "Cython>=0.29.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pauli_propagation*"]
